RESOLVED FIXED126490
JSPromiseReaction.cpp should use Compiler macros instead of raw "final" and "override"
https://bugs.webkit.org/show_bug.cgi?id=126490
Summary JSPromiseReaction.cpp should use Compiler macros instead of raw "final" and "...
Yusuke Suzuki
Reported 2014-01-04 08:33:16 PST
Since JSPromiseReaction.cpp use raw "final" and "override" macros, JSC cannot be built on Ubuntu 12.04's default compiler (g++ (Ubuntu/Linaro 4.6.3-1ubuntu5) 4.6.3)
Attachments
Patch (1.53 KB, patch)
2014-01-04 08:41 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2014-01-04 08:33:31 PST
I'll submit a patch soon.
Yusuke Suzuki
Comment 2 2014-01-04 08:41:47 PST
Yusuke Suzuki
Comment 3 2014-01-04 10:45:34 PST
Thank you for your quick review, Sam! Could you set cq+?
Sam Weinig
Comment 4 2014-01-04 17:43:57 PST
(In reply to comment #3) > Thank you for your quick review, Sam! Could you set cq+? Done.
WebKit Commit Bot
Comment 5 2014-01-04 18:11:34 PST
Comment on attachment 220375 [details] Patch Clearing flags on attachment: 220375 Committed r161317: <http://trac.webkit.org/changeset/161317>
WebKit Commit Bot
Comment 6 2014-01-04 18:11:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.