Use Compiler macros instead of raw "final" and "override" https://bugs.webkit.org/show_bug.cgi?id=126490

Patch by Yusuke Suzuki <utatane.tea@gmail.com> on 2014-01-04
Reviewed by Sam Weinig.

* runtime/JSPromiseReaction.cpp:

Canonical link: https://commits.webkit.org/144383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161317 268f45cc-cd09-0410-ab3c-d52691b4dbfc